cmake_minimum_required(VERSION 3.20.0)

project(Plants-vs-Zombies-Online-Battle LANGUAGES CXX)

if((NOT CMAKE_SYSTEM_NAME STREQUAL "Windows") OR (NOT CMAKE_SIZEOF_VOID_P EQUAL 4))
    message(FATAL_ERROR "Must configuring on/for Windows 32-bit")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

add_subdirectory(src)